ignore some local files

--- a/.gitignore
+++ b/.gitignore
@@ -19,23 +19,15 @@ RELEASE_NOTES.txt
 robots.txt
 shell
 var
-
 .htaccess.sample
-
 api.php
-
 favicon.ico
-
-galeriedesbijoux.sublime-project
-
-galeriedesbijoux.sublime-workspace
-
 get.php
-
 mage
-
 pkginfo/Mage_All.txt
-
 pkginfo/Mage_All_Latest.txt
-
 *.sublime-projectcompletions
+
+*.sublime-project
+
+*.sublime-workspace
