ignore other default designs

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@ app/code
 app/etc
 app/locale
 app/design/frontend/base
+app/design/frontend/default/blank
+app/design/frontend/default/default
+app/design/frontend/default/iphone
+app/design/frontend/default/modern
 lib
 js
 cron.php
