--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ app/design/frontend/default/iphone
 app/design/frontend/default/modern
 app/design/install
 skin/adminhtml
+skin/frontend/base
 lib
 js
 cron.php
