--- a/.gitignore
+++ b/.gitignore
@@ -11,13 +11,13 @@ app/design/frontend/default/modern
 app/design/install
 skin/adminhtml
 skin/frontend/base
-skin/default/blank
-skin/default/blue
-skin/default/default
-skin/default/french
-skin/default/german
-skin/default/iphone
-skin/default/modern
+skin/frontend/default/blank
+skin/frontend/default/blue
+skin/frontend/default/default
+skin/frontend/default/french
+skin/frontend/default/german
+skin/frontend/default/iphone
+skin/frontend/default/modern
 lib
 js
 cron.php
